# Porymap-With-Curry-Tools

./: .gitignore  CMakeLists.txt  Changelog.md  README.md  cn.ts  en.qm  en.ts  porymap.pro
forms/: aboutporymap.ui  mainwindow.ui  paletteeditor.ui  tileseteditor.ui
include/: editor.h  mainwindow.h  settings.h
include/ui/: paletteeditor.h  tileseteditor.h
src/: editor.cpp  main.cpp  mainwindow.cpp  project.cpp  settings.cpp
src/core/: paletteutil.cpp
src/ui/: paletteeditor.cpp  tileseteditor.cpp
